--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "formik": "^2.4.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-github-contribution-calendar": "^2.2.0",
     "react-select": "^5.8.0",
     "yup": "^1.4.0"
   },
