--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@coreui/icons": "^3.0.1",
+    "@coreui/icons-react": "^2.2.1",
     "@tanstack/react-router": "^1.19.13",
     "formik": "^2.4.5",
     "react": "^18.2.0",
