--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "@coreui/icons": "^3.0.1",
     "@coreui/icons-react": "^2.2.1",
+    "@tanstack/react-query": "^5.28.2",
     "@tanstack/react-router": "^1.19.13",
     "formik": "^2.4.5",
+    "octokit": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-github-contribution-calendar": "^2.2.0",
