--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "react-dom": "^18.2.0",
     "react-github-contribution-calendar": "^2.2.0",
     "react-select": "^5.8.0",
+    "uuid": "^9.0.1",
     "yup": "^1.4.0"
   },
   "devDependencies": {
     "@tanstack/router-vite-plugin": "^1.19.6",
     "@types/react": "^18.2.56",
     "@types/react-dom": "^18.2.19",
+    "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^7.0.2",
     "@typescript-eslint/parser": "^7.0.2",
     "@vitejs/plugin-react": "^4.2.1",
